tests/passing/unit_parameter_mixed.tails
func foo(x: unit, y: unit, z: int) -> int:
  z

func tests() -> unit:
  discard foo(pass, pass, 1)
