tests/failing/call_argument_count.tails
func foo(x: int) -> unit:
  pass

func tests() -> unit:
  discard foo(1, 2)

  pass
